fix(shop): version mobile

--- a/src/app/pages/shop/shop.component.scss
+++ b/src/app/pages/shop/shop.component.scss
@@ -123,3 +123,25 @@
   color: var(--color-text-secondary);
   margin-top: 3rem;
 }
+
+.mensaje-compra {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+
+  background-color: white;
+  padding: 3rem 2rem;
+  border-radius: 10px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  opacity: 0;
+  animation: fadeIn 0.3s ease forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
